tests/samples/positive/types/type_alias.ax
module type_alias;

type Count = i32;
type CountPtr = *mut Count;
type Bytes4 = [4]u8;
type PacketAlias = Packet;

struct Packet {
    len: Count;
}

fn read_count(value: CountPtr) -> Count {
    return unsafe { *value };
}

fn main() -> i32 {
    var count: Count = 41;
    let ptr: CountPtr = &count;
    let packet: PacketAlias = Packet { len: read_count(ptr) + 1 };
    return packet.len - cast[i32](sizeof[Bytes4]) - 38;
}
