tests/samples/negative/types/literal_suffix_type_mismatch.ax
module literal_suffix_type_mismatch;

fn main() -> i32 {
    let value: u8 = 1i32;
    return cast[i32](value);
}
